--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "dependencies": {
     "firebase": "^4.5.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-router-flux": "^4.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "xtend": "^4.0.1"
   }
 }
